@@ -90,6 +90,7 @@
   directly contact the server
   - [ ] Implement unit test, at least to be sure a server can't add itself twice
 **** TODO Client work
+     CLOCK: [2016-10-29 sam. 04:38]--[2016-10-29 sam. 04:50] =>  0:12
      CLOCK: [2016-10-29 sam. 04:00]--[2016-10-29 sam. 04:05] =>  0:05
      CLOCK: [2016-10-29 sam. 02:22]--[2016-10-29 sam. 03:55] =>  1:33
      CLOCK: [2016-10-28 ven. 03:41]--[2016-10-28 ven. 03:52] =>  0:11
@@ -195,10 +196,10 @@
     - [X] We should handle the Ok button callback (simply hide this)
       - [X] Handle the Ok button and close the dialog
     - [X] Correctly handle the destruction of CeguiDialog underlying window
-- [ ] Now, create the NyiDialog, based on CeguiDialog
-  - [ ] Pass the featurename to named constructor
+- [-] Now, create the NyiDialog, based on CeguiDialog
+  - [X] Pass the featurename to named constructor
     and add this to the dialog text
-  - [ ] Try to use styled text to  emphasis the featurename
+  - [X] Try to use styled text to  emphasis the featurename
   - [ ] Must be tested with multiple NyiDialog at the same time
 - [ ] Try to use the 'FetteUNZFraktur' font from the CEGUI demo
 - [ ] These is (again) a segfault when cancel the Ogre3D config dialog
